# MyyEngine

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  GameEngine.sln  docker-compose.yml
GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters
GameEngine/Application/: main.cpp
GameEngine/Engine/Assets/: AssetManager.cpp  AssetManager.h  FontManager.cpp  FontManager.h  SoundManager.cpp  SoundManager.h
GameEngine/Engine/Core/: Logger.cpp  Logger.h  RenderQueue.cpp  RenderQueue.h  Window.cpp  Window.h
GameEngine/Engine/Core/Math/: Vector2.h
GameEngine/Engine/Core/Props/: ParticleProps.h  SpriteProperties.h
GameEngine/Engine/ECS/: GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h
GameEngine/Engine/ECS/Components/: AnimationComponent.h  Component.h  ParticleComponent.cpp  ParticleComponent.h  RigidbodyComponent.h  SpriteComponent.h  TransformComponent.h
GameEngine/Engine/Game/: DemoGame.cpp  DemoGame.h  Game.cpp  Game.h
GameEngine/Engine/Renderer/: Camera2D.cpp  Camera2D.h  RenderQueue.cpp  RenderQueue.h  Renderer2D.cpp  Renderer2D.h
GameEngine/Engine/Scene/: Scene.h  SceneManager.cpp  SceneManager.h
GameEngine/Engine/Systems/: AnimationSystem.cpp  AnimationSystem.h  ISystem.h  InputSystem.cpp  InputSystem.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h
